components/banner.css
#my-photo{
  height: 100vh;
}


#about{
  align-items: center;
  background-color: black;
  display: flex;
  flex-wrap: wrap;
  height: 100vh;
  justify-content: center;
  overflow:hidden;
  padding: 0 10px;
}

#photo{
  align-items: center;
  margin: auto;
  position: absolute;
  right: 0px;
  top: 0px;
  z-index: 0;
}

#about > div{
  margin: auto;
}

#text{
  float: left;
  margin: auto;
  padding-right: 20px;
  max-width: 800px;
  text-shadow: rgb(0, 0, 0) 2px 0px;
  z-index: 1;
}

#about > div > p{
  color: white;
  font-family: 'Encode Sans', sans-serif;
  font-size: 30pt;

}

#call-to-action{
  position: absolute;
  bottom: 30px;
  animation-name: bounce;
  animation-duration: 750ms;
  animation-iteration-count: infinite;
}

.moving-link {
  color: white;
  font-weight: 400;
  text-align: center;
  font-size: 16pt;
  text-shadow: rgb(0, 0, 0) 2px 0px;
  transition: all 0.2s ease;
}

.moving-link > p {
  margin-bottom: 0;
}

@keyframes bounce {
  0%, 100% {
    transform: translateY(0px);
  }
  50%{
    transform: translateY(-5px);
  }
  75%{
    transform: translateY(10px);
  }
}

